src/styles/index.css
@import "tailwindcss";
@import url("https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap");
@import "./utilities.css";
@import "./animation.css";
@custom-variant dark (&: where(.dark, .dark *));

@theme {
    --font-greeting: "Carattere", sans-serif;
    --font-body: "Karla", sans-serif;
    --font-title: "Source Code Pro", monospace;

    /*Base*/
    --color-bgDeepBlack: #222222;
    
    --color-lightGray: #9e9e9e;
    --color-bgLightGray: #fafafa;
    --color-DeepGray: #3b3b3b;
    
    --color-darkPink: #f2bdd3;
    --color-LineDarkPink: #ffc9de;
}

:root {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    color-scheme: light dark;
}

body {
    min-width: 320px;
    min-height: 100vh;
    font-family: var(--font-body);
    background-color: var(--color-bgGray);
    color: white;
    font-size: 14px;
}

